// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm should render correctly with allowChangePassword and loginError 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1 />
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <div
      class="login__error"
    >
      login error
    </div>
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;

exports[`LoginForm should render correctly without paramsr 1`] = `
<DocumentFragment>
  <form
    novalidate=""
  >
    <h1 />
    <input
      name="username"
      placeholder="Username"
      required=""
      type="text"
      value=""
    />
    <input
      name="password"
      placeholder="Password"
      required=""
      type="password"
      value=""
    />
    <button
      class="button"
      type="submit"
    >
      Login
    </button>
  </form>
</DocumentFragment>
`;
